dev/Ingress/ingress-routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "filetes.back.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: filetes-service
            port:
              number: 8081
  - host: "filetes.front.com"
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: front-service 
           port:
             number: 8084
